新增:通过武器名获得武器白字伤害功能

--- a/Division2DC/css/css.css
+++ b/Division2DC/css/css.css
@@ -12,6 +12,9 @@
   *{
     color: black;/*全局字体颜色*/
   }
+  .WeaponValue{
+    padding-bottom: 10px;
+  }
   body{
     background-color: rgb(240, 240, 240);
   }
