新增:woff、svg字体支持

--- a/Division2DC/css/css.css
+++ b/Division2DC/css/css.css
@@ -6,7 +6,9 @@
 @font-face {
   font-family: myfont;
   src: url(../font/方正粗圆.ttf),
-  url(../font/方正粗圆.eot);
+  url(../font/方正粗圆.eot),
+  url(../font/方正粗圆.woff),
+  url(../font/方正粗圆.svg);
 }
 @media screen and (min-width: 730px){
   *{
