修正:让部分按钮不可被复制

--- a/Division2DC/css/css.css
+++ b/Division2DC/css/css.css
@@ -218,6 +218,7 @@
     font-family: 'myfont';
     font-size: 18px;
     vertical-align: top;
+    user-select: none;
   }
 
   .allcomputebuttons {
@@ -229,6 +230,7 @@
     margin-top: 5px;
     font-family: 'myfont';
     font-size: 18px;
+    user-select: none;
   }
 
   .allcompute > a{
@@ -245,6 +247,7 @@
     border-bottom: 5px solid orange;
     border-radius: 5px 0 0 0;
     border-top: 3px solid orange;
+    user-select: none;
   }
 
 
@@ -545,6 +548,7 @@
     margin-top: 5px;
     font-family: 'myfont';
     font-size: 18px;
+    user-select: none;
   }
 
   .allcomputebuttons {
@@ -572,6 +576,7 @@
     border-bottom: 5px solid orange;
     border-radius: 5px 0 0 0;
     border-top: 3px solid orange;
+    user-select: none;
   }
 
   .allcompute > a:hover {
@@ -661,6 +666,7 @@
   .floatCal a span {
     font-family: 'myfont';
     font-size: 20px;
+    user-select: none;
   }
 
   .floatCal a {
